email retry checkpoint

--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -260,6 +260,8 @@ smtp_ssl = False
 # smtp_password = airflow
 smtp_port = 25
 smtp_mail_from = airflow@example.com
+smtp_retry_max_attempts = 5
+smtp_retry_sleep_time_in_seconds = 1.0
 
 
 [celery]
@@ -372,12 +374,12 @@ authenticate = False
 
 [ldap]
 # set this to ldaps://<your.ldap.server>:<port>
-uri = 
+uri =
 user_filter = objectClass=*
 user_name_attr = uid
 group_member_attr = memberOf
-superuser_filter = 
-data_profiler_filter = 
+superuser_filter =
+data_profiler_filter =
 bind_user = cn=Manager,dc=example,dc=com
 bind_password = insecure
 basedn = dc=example,dc=com
